# starlingmonkey-ng

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
crates/builtins/cpp-builtins/: AUTHORS.md  Cargo.toml  README.md  build.rs
crates/builtins/cpp-builtins/cpp/builtins/: console.cpp  console.h
crates/builtins/cpp-builtins/cpp/runtime/: builtin.cpp  decode.cpp  encode.cpp  event_loop.cpp  host_call.cpp
crates/builtins/cpp-builtins/include/: builtin.h  debugger.h  decode.h  encode.h  errors.h  event_loop.h  extension-api.h  host_api.h  sequence.hpp  sockets.h
crates/builtins/cpp-builtins/src/: lib.rs
crates/builtins/simple-http/: Cargo.toml
crates/builtins/simple-http/src/: http.rs  lib.rs
crates/builtins/web-globals/: Cargo.toml
crates/builtins/web-globals/src/: base64.rs  console.rs  dom_exception.rs  lib.rs  wpt_support.rs
crates/core-runtime/: Cargo.toml
crates/core-runtime/src/: class.rs  config.rs  event_loop.rs  lib.rs  module.rs  runtime.rs  test_util.rs
crates/core-runtime/src/event_loop/: native.rs  promise.rs  timer.rs
crates/core-runtime/tests/: event_loop.rs  js_api.rs  scope.rs  scope_gc_zeal.rs  typedef_macros.rs
crates/js/: Cargo.toml
crates/js/src/: array.rs  bigint.rs  builtins.rs  class.rs  comparison.rs  compartment.rs  compile.rs  context.rs  conversion.rs  date.rs  debug.rs  error.rs  exception.rs  function.rs  id.rs  ionmonkey.rs  jobs.rs  json.rs  lib.rs  module.rs  object.rs  prelude.rs  promise.rs  regexp.rs  stack.rs  string.rs  structured_clone.rs  symbol.rs  try_catch.rs  typedarray.rs  value.rs
crates/js/src/collections/: map.rs  mod.rs  set.rs  weak_map.rs
crates/js/src/gc/: handle.rs  mod.rs  pool.rs  scope.rs
crates/libstarling/: Cargo.toml
crates/libstarling/src/: lib.rs
crates/starling-macro/: Cargo.toml
crates/starling-macro/src/: lib.rs
crates/wpt-support/: Cargo.toml
crates/wpt-support/src/: lib.rs
crown/: Cargo.toml  rust-toolchain.toml
crown/src/: bare_value_in_gc_struct.rs  common.rs  main.rs  trace_in_no_trace.rs  unrooted_must_root.rs
crown/tests/: compile_test.rs
crown/tests/compile-fail/: bare_value_in_gc_struct.rs  bare_value_nested_in_gc_struct.rs  missing_allow_in_rc.rs  missing_unrooted_interior.rs  missing_unrooted_interior_on_trait.rs  trait_type_impl_must_root.rs  type_holder_user_must_root.rs  unrooted_must_root_struct_field.rs
crown/tests/run-pass/: bare_value_in_gc_struct_ok.rs
scripts/: check-crown.sh  clone-wpt.sh  test-gc-zeal.sh
starling/: Cargo.toml
starling/examples/: class_inheritance.rs  class_methods.rs  class_with_jsref.rs.disabled  globals.rs  heap_refs.rs  native_module.rs  showcase.js  showcase.rs
starling/src/: main.rs
tests/wpt-harness/: post-harness.js  pre-harness.js  run-wpt.mjs  tests.json
tests/wpt-harness/expectations/html/webappapis/atob/: base64.any.js.json
tests/wpt-harness/expectations/webidl/ecmascript-binding/es-exceptions/: DOMException-constants.any.js.json  DOMException-constructor-and-prototype.any.js.json  DOMException-constructor-behavior.any.js.json  DOMException-custom-bindings.any.js.json
