[package]
name = "starling-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Proc macros for defining JavaScript classes backed by Rust structs in mozjs."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
