[package]
name = "web-globals"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
debugmozjs = ['js/debugmozjs']

[dependencies]
core-runtime.workspace = true
js.workspace = true

[dev-dependencies]
libstarling.workspace = true

[lints]
workspace = true
